# bd

./: .gitignore  .gitmodules  Decision_Tree.dot  README.md  bd_endsem.ipynb  decision_tree_metrics.ipynb  kmeans_iris.ipynb
1/: ECLAT.py  README.md  apriori.py  arbc.R  decision_tree_metrics.ipynb  fim_lib_pymining.py  fim_mlxtend.py  fim_orange.py  kmeans_iris.ipynb  kmeans_iris_met.ipynb
1/4/: README.md  a.py
1/4/.mypy_cache/3.7/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _imp.data.json  _imp.meta.json  _importlib_modulespec.meta.json  _random.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  atexit.data.json  atexit.meta.json  builtins.data.json  (+122 more)
2/: DataMining-Pincer-Search--master.7z  README.md
2/him/Mafia-1.4/: Makefile  Makefile.am  Makefile.in  README  acinclude.m4  chess.ascii  config.h  config.status  configure  configure.in  configure.in.in  libtool  mafia  mafia.kdevprj  mafia.kdevses  mafia.lsm
2/him/Mafia-1.4/src/: Mafia.cpp  Makefile  Makefile.am  Makefile.in  Tables.h
2/him/Mafia-1.4/src/.deps/: BaseBitmap.Po  Bitmap.Po  ItemsetOutput.Po  Mafia.Po  Transaction.Po
2/spmf/: aclose.sh  charm.sh  partitioning.sh  transactionRed.sh
3/: README.md
endsem/: bd_endsem.ipynb
proj/: Project_Clustering.ipynb  Project_Descriptive-PreProcessing.ipynb  Spark.ipynb  TFIDF.ipynb
(+99 files in other folders)
