####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = mafia

## INCLUDES were found outside kdevelop specific part

mafia_SOURCES = ItemsetOutput.cpp Transaction.cpp Mafia.cpp Bitmap.cpp BaseBitmap.cpp 
mafia_LDADD   = 


EXTRA_DIST = BaseBitmap.cpp BaseBitmap.h Bitmap.cpp Bitmap.h Mafia.cpp Tables.h TreeNode.h Transaction.cpp Transaction.h ItemsetOutput.cpp ItemsetOutput.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
mafia_LDFLAGS = $(all_libraries) 
                                                                                
